@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.516 2003-12-03 07:39:36 castaglia Exp $
+$Id: NEWS,v 1.517 2003-12-16 17:43:28 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -7,7 +7,7 @@ CVS
   keys when the daemon is starting up.
 - Bug 2086 - Add limits for PORT, PASV.  This means that now one can use
   <Limit> to place access controls on the PORT and PASV commands.  This
-  applies to the EPRT and EPSV commands as well if IPv6 support is enabled.
+  applies to the EPRT and EPSV commands as well.
 - Bug 2174 - mod_auth_unix should not act authoritatively.  This was causing
   problems when using mod_auth_unix.c and the AuthOrder configuration
   directive.
@@ -59,6 +59,9 @@ CVS
 - Bug 2290 - gmtime() static storage may be overwritten by modules.
 - Bug 2288 - ServerFQDN set to 255.255.255.255 and not hostname.
 - Added mod_quotatab to the contrib area.
+- Bug 2300 - poll() returns 1 and read returns 0, resulting in and inifinite
+  loop.  The actual bug was caused by a goto that was being inappropriately
+  used; a return value was not being checked to see if it was an error value.
 
 1.2.9 - Released 31-Oct-2003
 ---------------------------------
